adding class box

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <div class="swiper-slide">
         <div class="main-background">
-            <div id="box" class="box-1"></div>
-            <div id="box" class="box-2"></div>
-            <div id="box" class="box-3"></div>
-            <div id="box" class="box-4"></div>
+            <div id="box" class="box box-1"></div>
+            <div id="box" class="box box-2"></div>
+            <div id="box" class="box box-3"></div>
+            <div id="box" class="box box-4"></div>
         </div>
     </div>
 
