--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
 <body>
 
-    <div class="main-background">
-        <div id="box" class="box-1"></div>
-        <div id="box" class="box-2"></div>
-        <div id="box" class="box-3"></div>
-        <div id="box" class="box-4"></div>
+    <div class="convert-section-slider">
+        <div class="main-background">
+            <div id="box" class="box-1"></div>
+            <div id="box" class="box-2"></div>
+            <div id="box" class="box-3"></div>
+            <div id="box" class="box-4"></div>
+        </div>
     </div>
 
     <script src="lib/jquery.min.js"></script>
